force-app/main/default/objects/copado__External_CI_Setting__c/fields/copado__Credential_Validated__c.field-meta.xml
<CustomField>
    <fullName>copado__Credential_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credential Validated</label>
    <type>Checkbox</type>
</CustomField>