force-app/main/default/objects/copado__External_CI_Setting__c/fields/copado__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>copado__Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>