force-app/main/default/objects/copado__External_CI_Setting__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__CI_Tool__c</columns>
    <columns>copado__Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>